--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Spring Social Twitter
+spring.social.twitter.appId: appId
+spring.social.twitter.appSecret: appSecret
+twitter.access.token: accessToken
+twitter.access.token.secret: tokenSecret
 
+# Logs
+logging.level.org.springframework.web: DEBUG
+spring.mvc.log-request-details: true
+
+# Swagger
+springdoc.api-docs.path: /api-docs
