--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.ariavbar</groupId>
 	<artifactId>twitter-operations-gw</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -24,9 +25,24 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+		   <groupId>org.springframework.social</groupId>
+		   <artifactId>spring-social-twitter</artifactId>
+		   <version>1.1.2.RELEASE</version>
+		</dependency>	
+		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-validator</artifactId>
 		    <version>6.1.0.Final</version>
+		</dependency>
+		<dependency>
+    	<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-ui</artifactId>
+    		<version>1.4.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.ulisesbocchio</groupId>
+		    <artifactId>jasypt-spring-boot-starter</artifactId>
+		    <version>3.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
